--- a/integrations/vscode/webview-ui/index.html
+++ b/integrations/vscode/webview-ui/index.html
@@ -3,27 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sentinel Chat</title>
-    <style>
-      #build-banner {
-        position: fixed;
-        top: 10px;
-        right: 10px;
-        z-index: 9999;
-        padding: 6px 10px;
-        border-radius: 999px;
-        background: #0f172a;
-        color: #fff;
-        font-family: ui-sans-serif, system-ui, -apple-system, sans-serif;
-        font-size: 11px;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-        box-shadow: 0 10px 24px rgba(15, 23, 42, 0.2);
-      }
-    </style>
+    <title>Sentinel AI Alignment</title>
   </head>
   <body>
-    <div id="build-banner">World UI Build · 2026-02-04</div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
